@@ -1,7 +1,8 @@
 FROM navikt/java:11-appdynamics
 
 ENV APPD_ENABLED=true
+ENV JAVA_OPTS="${JAVA_OPTS} --add-opens java.base/jdk.internal.reflect=ALL-UNNAMED"
 ENV JAVA_OPTS="${JAVA_OPTS} -XX:+UseG1GC -Xms1024M -Xmx4096M -XX:MaxMetaspaceSize=512m"
 COPY java-debug.sh /init-scripts/08-java-debug.sh
 
- COPY /web/target/modiabrukerdialog.jar app.jar
+COPY /web/target/modiabrukerdialog.jar app.jar
